# nyx

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: config.rs  error.rs  main.rs
src/cli/: clipboard.rs  mod.rs  test.rs
src/cli/db/: backup.rs  changepass.rs  close.rs  create.rs  history.rs  mod.rs  open.rs  restore.rs  stats.rs
src/cli/note/: copy.rs  delete.rs  edit.rs  find.rs  list.rs  mod.rs  new.rs  rename.rs  show.rs  xn.rs
src/cli/otp/: copy.rs  delete.rs  edit.rs  find.rs  generate.rs  list.rs  mod.rs  new.rs  rename.rs  show.rs  xp.rs  xr.rs  xw.rs
src/cli/ssh/: copy.rs  delete.rs  edit.rs  find.rs  generate.rs  import.rs  list.rs  mod.rs  rename.rs  show.rs  xb.rs  xh.rs  xp.rs  xu.rs  xv.rs
src/cli/str/: copy.rs  delete.rs  find.rs  get.rs  list.rs  mod.rs  rename.rs  set.rs
src/cli/user/: copy.rs  delete.rs  edit.rs  find.rs  list.rs  mod.rs  new.rs  rename.rs  show.rs  xp.rs  xu.rs  xw.rs
src/database/: base.rs  fs.rs  history.rs  loader.rs  mod.rs  notes.rs  nyxdb.rs  oauth.rs  ssh_keys.rs  strings.rs  users.rs
src/rpc/: daemon.rs  fs_launcher.rs  launcher.rs  message.rs  mod.rs
src/security/: crypto.rs  mod.rs  password.rs
tests/: test_error_handling.rs  test_notes.rs  test_otp.rs  test_ssh.rs  test_strings.rs  test_users.rs
tests/common/: mod.rs
