[package]
name = "nyxpass"
version = "1.0.0"
description = "Secure command line utility to manage passwords, authenticator app OTP codes, SSH keys, and notes."
edition = "2024"
authors = ["Aquila Labs"]
homepage = "https://cicero.sh/nyx"
keywords = ["password-manager", "privacy", "security", "2fa"]
categories = ["authentication"]
readme = "README.md"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/cicero-ai/nyx"

[[bin]]
name="nyx"
path="src/main.rs"

[features]
default = []
fuse = ["fuser"]
testutil = []

[profile.release]
strip="symbols"
debug=false
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
atlas-http = "0.2.4"
atty = "0.2.14"
base64 = "0.22.1"
bincode = "2.0.1"
bip39 = "2.2.0"
chrono = "0.4.42"
dirs = "6.0.0"
falcon-cli = "0.2.2"
fuser = { version = "0.16.0", optional = true }
hkdf = "0.12.4"
lazy_static = "1.5.0"
libc = "0.2.176"
nix = "0.30.1"
otpauth = "0.5.1"
rand = "0.8.5"
rsa = "0.9.8"
serde = "1.0.228"
serde_json = "1.0.145"
sha2 = "0.10.9"
ssh-key = { version = "0.6.7", features = ["std", "rsa", "encryption"] }
tokio = { version = "1.47.1", features = ["net", "time", "rt-multi-thread", "macros", "signal"] }
winapi = "0.3.9"
zeroize = "1.8.1"

[target.'cfg(target_os = "linux")'.dependencies]
fuser = "0.16.0"

[dev-dependencies]
assert_cmd = "2.0.17"
falcon-cli = { version = "0.2.2", features = ["mock"] }
predicates = "3.1.3"

